@@ -134,11 +134,14 @@ FOUNDATION_LIBRARY_DEFINE = -DSun_Foundation_LIBRARY=1
 endif
 
 GNUSTEP_HEADERS_FND_FLAG = -I$(GNUSTEP_USER_HEADERS)/$(GNUSTEP_FND_DIR) \
-	-I$(GNUSTEP_USER_HEADERS)/$(GNUSTEP_FND_DIR)/$(GNUSTEP_TARGET_CPU)/$(GNUSTEP_TARGET_OS)/$(OBJC_RUNTIME) \
 	-I$(GNUSTEP_LOCAL_HEADERS)/$(GNUSTEP_FND_DIR) \
+	-I$(GNUSTEP_SYSTEM_HEADERS)/$(GNUSTEP_FND_DIR)
+
+ifeq ($(FOUNDATION_LIB), fd)
+GNUSTEP_HEADERS_FND_FLAG += -I$(GNUSTEP_USER_HEADERS)/$(GNUSTEP_FND_DIR)/$(GNUSTEP_TARGET_CPU)/$(GNUSTEP_TARGET_OS)/$(OBJC_RUNTIME) \
 	-I$(GNUSTEP_LOCAL_HEADERS)/$(GNUSTEP_FND_DIR)/$(GNUSTEP_TARGET_CPU)/$(GNUSTEP_TARGET_OS)/$(OBJC_RUNTIME) \
-	-I$(GNUSTEP_SYSTEM_HEADERS)/$(GNUSTEP_FND_DIR) \
 	-I$(GNUSTEP_SYSTEM_HEADERS)/$(GNUSTEP_FND_DIR)/$(GNUSTEP_TARGET_CPU)/$(GNUSTEP_TARGET_OS)/$(OBJC_RUNTIME)
+endif
 
 #
 # Determine AppKit header subdirectory based upon library combo
